[package]
name = "uptest"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/uptest-sc/uptest/"
description = "substrate rUntime uPgrade TESTing suit"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features=["derive"]}

[build-dependencies]
clap_mangen = "0.2.2"
clap = { version = "4.0.15", features=["derive"]}
