[package]
name = "uptest"
version = "0.1.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/uptest-sc/uptest/"
description = "substrate rUntime uPgrade TESTing suit"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
	"libuptest",
	"examples"
]

[dependencies]
clap = { version = "4.1.4", features=["derive"]}
libuptest = { path = "libuptest/", version = "0.1.1"}


[build-dependencies]
clap_mangen = "0.2.7"
clap = { version = "4.1.4", features=["derive"]}
