[package]
name = "uptest-cli"
version = "0.1.4"
edition = "2021"
license = "MIT"
homepage = "https://github.com/uptest-sc/uptest/"
description = "substrate rUntime uPgrade TESTing suit"
readme = "README.md"


[dependencies]
clap = { version = "4.1.4", features=["derive"]}
libuptest = { path = "../libuptest/", version = "0.1.4", features = ["metadatadecode", "auto-test"]}
tokio = { version = "1.27", features = ["full"] }
hex = { version = "0.4.3", features = ["alloc"]}
anyhow = "1.0.69"

[build-dependencies]
clap_mangen = "0.2.7"
clap = { version = "4.1.4", features=["derive"]}
