[package]
name = "libuptest"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/uptest-sc/uptest/"
description = "Core Liberary for UpTest"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { version = "0.15.1", features = ["async-client", "client-ws-transport", "http-client"] }
#subxt = { version = "0.24.0"  }
#tokio = { version = "1.16" }
