[package]
name = "libuptest"
version = "0.1.2"
edition = "2021"
authors = ["Filip Kalebo<info@rustsyndi.cat>"]
license = "MIT"
homepage = "https://github.com/uptest-sc/uptest/"
description = "Core Substrate runtime upgrade Library for UpTest"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { version = "0.16.2",  features = ["server", "ws-client", "macros", "client-ws-transport"]}
jsonrpsee-core = "0.16.2"
hex = { version = "0.4.3", features = ["alloc"]}
anyhow = "1.0.69"
serde_json = { version = "1" }
futures = "0.3.26"
serde = { version = "1.0.173", features = ["derive"], default-features = false }
fixed-hash = "0.8"
maybe-async = { version = "0.2.7" }
async-trait = "0.1.68"
impl-serde = { version = "0.4.0", default-features = false }
tokio = { version = "1.27", features = ["full"] }



[features]
all = ["metadatadecode", "migrationsearch"]#, "subxthelper"
metadatadecode = ["desub-current", "frame-metadata"]
subxthelper = ["subxt", "subxt-signer", "subxt-macro", "subxt-metadata"]
migrationsearch = ["reqwest", "glob", "regex", "tar", "flate2"]

[dependencies.subxt-macro]
version = "0.30.0"
optional = true

[dependencies.subxt-metadata]
version = "0.30.0"
optional = true

[dependencies.subxt]
version = "0.30.0"
optional = true
#git = "https://github.com/paritytech/subxt/" 

[dependencies.subxt-signer]
version = "0.30.0"
features = ["subxt"]
optional = true
#git = "https://github.com/paritytech/subxt/" 


[dependencies.desub-current]
version = "0.1.0"
optional = true
git = "https://github.com/uptest-sc/desub" #forked for smaller mods
rev = "0932164"

[dependencies.frame-metadata]
version = "14.2"
features = ["v14", "std", "scale-info"]
optional = true

[dependencies.reqwest]
version = "0.11.18"
features = ["json"]
optional = true

[dependencies.glob]
version = "0.3.1"
optional = true

[dependencies.regex] 
version = "1.9.1" 
optional = true

[dependencies.flate2] 
version = "1.0.26"
optional = true

[dependencies.tar] 
version = "0.4.39"
optional = true